fixed some style errors on safari and chrome

--- a/client/src/assets/style/iconsView.css
+++ b/client/src/assets/style/iconsView.css
@@ -97,7 +97,7 @@
 
     color: #FFF;
     font-size: 11px;
-    font-weight: lighter;
+    font-weight: 200;
     line-height: 30px;
     letter-spacing: 2px;
 }
